--- a/multiple-status-view/build.gradle
+++ b/multiple-status-view/build.gradle
@@ -1,10 +1,9 @@
 apply plugin: 'com.android.library'
 
 android {
-    // resourcePrefix rootProject.ext.resourcePrefix
 
     compileSdkVersion rootProject.ext.android.compileSdkVersion
-    buildToolsVersion rootProject.ext.android.buildToolsVersion
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         minSdkVersion rootProject.ext.android.minSdkVersion
